# ffmpeg_study

./: AudioDecoder.cpp  AudioDecoder.h  AudioRender.cpp  AudioRender.h  CMakeLists.txt  CaltulateTime.cpp  CaltulateTime.h  GrabAudio.cpp  GrabAudio.h  GrabWindow.cpp  GrabWindow.h  PacketQueue.h  README.md  RingBuffer.h  VideoDecoder.cpp  VideoDecoder.h  VideoState.cpp  VideoState.h  common.h  decode.cpp  decode.h  demuxer.cpp  demuxer.h  encode.cpp  encode.h  logger.h  main.cpp  playaudio.cpp  player.cpp  player.h  playeraudio.h  splite.cpp  splite.h
